# meamr_drive_model

./: CMakeLists.txt  package.xml
config/: meamr_base_params.yaml  serial.yaml
include/meamr_drive_model/: dd_kinematic_model.hpp  meamr_base.hpp  serial_interface.hpp  vehicle_hardware_data.h
launch/: meamr_base.launch.py
src/: dd_kinematic_model.cpp  meamr_base.cpp  meamr_base_node.cpp  serial_interface.cpp
temp/: serial_motors.cpp  serial_motors.hpp  serial_port.cpp  serial_port.hpp
