<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>meamr_drive_model</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dowsonhsu1222@gmail.com">weii</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- <build_depend>serial_driver</build_depend> -->
  <!-- <exec_depend>serial_driver</exec_depend>
  <build_export_depend>serial_driver</build_export_depend> -->


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
